--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -10,7 +10,7 @@
       <% end %>   
       <div class="room-explanation">
         <div class="room-icon">
-          <%= image_tag 'https://presite-potepancamp-rails-02.herokuapp.com/assets/default_icon.jpg',class:"host-icon" %>
+          <%= image_tag 'https://rails-02-sample.herokuapp.com/assets/common/default-avatar-7a6cbfd7993e89f24bfc888f4a035a83c6f1428b8bdc47eed9095f2799a40153.png',class:"host-icon" %>
         </div>
         <div class="room-profile">
           <p class="room-name"><%= @room.room_name %></p>
