--- a/app/views/tops/home.html.erb
+++ b/app/views/tops/home.html.erb
@@ -17,19 +17,19 @@
       <h1 class="section-title">おすすめのエリア</h1>
       <div class="row1">
         <div class="area-tokyo">
-          <%= link_to image_tag("https://presite-potepancamp-rails-02.herokuapp.com/assets/img_tokyo.jpg",class: "panel-img"),  search_rooms_path(area:"東京")%>
+          <%= link_to image_tag("https://rails-02-sample.herokuapp.com/assets/home/recommend-area/tokyo.jpg",class: "panel-img"),  search_rooms_path(area:"東京")%>
           <span>東京</span>
         </div>
         <div class="area-oosaka">
-          <%= link_to image_tag("https://presite-potepancamp-rails-02.herokuapp.com/assets/img_osaka.jpg",class: "panel-img"),  search_rooms_path(area:"大阪")%>
+          <%= link_to image_tag("https://rails-02-sample.herokuapp.com/assets/home/recommend-area/osaka.jpg",class: "panel-img"),  search_rooms_path(area:"大阪")%>
           <span>大阪</span>
         </div>
         <div class="area-kyoto">
-          <%= link_to image_tag("https://presite-potepancamp-rails-02.herokuapp.com/assets/img_kyoto.jpg",class: "panel-img"),  search_rooms_path(area:"京都")%>
+          <%= link_to image_tag("https://rails-02-sample.herokuapp.com/assets/home/recommend-area/kyoto.jpg",class: "panel-img"),  search_rooms_path(area:"京都")%>
           <span>京都</span>
         </div>
         <div class="area-sapporo">
-          <%= link_to image_tag("https://presite-potepancamp-rails-02.herokuapp.com/assets/img_sapporo.jpg",class: "panel-img"),  search_rooms_path(area:"札幌")%>
+          <%= link_to image_tag("https://rails-02-sample.herokuapp.com/assets/home/recommend-area/sapporo.jpg",class: "panel-img"),  search_rooms_path(area:"札幌")%>
           <span>札幌</span>
         </div>  
       </div>
