--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -138,7 +138,7 @@ border-color: #6c757d;
 }
 
 .top .top-main {
-  background-image: url(https://presite-potepancamp-rails-02.herokuapp.com/assets/img_cover_top.jpg);
+  background-image: url(https://rails-02-sample.herokuapp.com/assets/home/cover-lg.jpg);
   background-size: cover;
   width: 100%;
   height: 650px;
@@ -156,6 +156,10 @@ border-color: #6c757d;
   color: white;
   margin: 15px;
 
+}
+
+.top-logg{
+  width: 221px;
 }
 
 .form-control-d{
